--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7071;http://localhost:5280"
+      "applicationUrl": "https://localhost:7071"
     },
     "IIS Express": {
       "commandName": "IISExpress",
